--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,15 @@ body {
   font-family: sans-serif;
 }
 
+.display {
+  color: white;
+  width: 100%;
+  background-color: #333;
+  padding: 10px 20px;
+  border: 1px solid black;
+  font-size: 2em;
+}
+
 .flex-container-column {
   display: flex;
   flex-direction: column;
@@ -34,4 +43,21 @@ body {
 
 .double {
   flex-basis: 50%;
+}
+
+.negative,
+.operator,
+.equals {
+  background: orange;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 30px;
+  margin-top: 20px;
+}
+
+.button:hover {
+  font-weight: bold;
 }
