--- a/assets/style.css
+++ b/assets/style.css
@@ -62,8 +62,41 @@ body {
   font-weight: bold;
 }
 
+.history {
+  width: 80%;
+  margin: 30px auto 0 auto;
+  overflow: scroll;
+  margin-bottom: 40px;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+th,
+td {
+  text-align: center;
+  padding: 16px;
+}
+
+th {
+  background-color: orange;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color: #d2d2d2;
+}
+
 @media screen and (max-width: 537px) {
   .button {
     padding: 10px;
+  }
+
+  .history {
+    width: 100%;
   }
 }
